Öğretmen Ekleme Ve Listeleme Eklendi
Öğretmen Ekleme Ve Listeleme Eklendi

--- a/Documents/NetBeansProjects/BitirmeProjesi-master/src/main/webapp/template/admin_template.xhtml
+++ b/Documents/NetBeansProjects/BitirmeProjesi-master/src/main/webapp/template/admin_template.xhtml
@@ -104,10 +104,37 @@
                                                 <i class="icon-table"></i><span>&nbsp;School List</span> 
                                             </h:link> </li>
                                     </ul>
+                                    
+                                    
+                                </li>
+                            </ul>
+                            <ul class="mainnav">
+                                <li class="dropdown subnavbar-open-right">
+                                    <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> 
+                                        <i class="icon-anchor"></i><i class="icon-anchor"></i><span>Teacher Works</span> 
+                                        <b class="caret"></b>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li>  <h:link outcome="/teacherWorks/insertTeacher.xhtml">
+                                                <i class="icon-plus"></i><span>&nbsp;Teacher Insert</span> 
+                                            </h:link> </li>
+                                        <li>  <h:link outcome="/teacherWorks/teacherList.xhtml">
+                                                <i class="icon-table"></i><span>&nbsp;Teacher List</span> 
+                                            </h:link> </li>
+                                    </ul>
                                 </li>
                             </ul>
                         </div>
+                     
                         <!-- /container --> 
+                        
+                        
+                           
+                                
+                                    
+                                
+                            
+                       
                     </div>
                     <!-- /subnavbar-inner --> 
                 </div>
