--- a/Documents/NetBeansProjects/BitirmeProjesi-master/src/main/webapp/template/main_template.xhtml
+++ b/Documents/NetBeansProjects/BitirmeProjesi-master/src/main/webapp/template/main_template.xhtml
@@ -6,7 +6,7 @@
 
     <h:head>
         <meta charset="utf-8"/>
-        <title>Dashboard - Teacher Admin Template</title>
+        <title>Dashboard - Teacher Main Template</title>
         <link href="../resources/css/bootstrap.min.css" rel="stylesheet"/>
         <link href="../resources/css/bootstrap-responsive.min.css" rel="stylesheet"/>
         <link href="../resources/css/font-awesome.css" rel="stylesheet"/>
@@ -57,7 +57,7 @@
                         <div class="container">
                             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span
                                     class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-                            </a><h:outputLink class="brand" value="/template/dashboard.xhtml">Teacher Admin Template </h:outputLink>
+                            </a><h:outputLink class="brand" value="/template/dashboard.xhtml">Teacher Main Template </h:outputLink>
                             <div class="nav-collapse">  
                                 <ul class="nav pull-right">
                                     <li class="dropdown">
