--- a/src/main/webapp/template/admin_template.xhtml
+++ b/src/main/webapp/template/admin_template.xhtml
@@ -76,103 +76,7 @@
     <h:body>
         <h:form enctype="multipart/form-data">
             <ui:insert name="top">
-                <div class="navbar navbar-fixed-top">
-
-                    <div class="navbar-inner">
-                        <div class="container">
-                            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span
-                                    class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-                            </a><h:outputLink class="brand" value="/template/dashboard.xhtml">Teacher Admin Template </h:outputLink>
-                            <div class="nav-collapse">  
-                                <ul class="nav pull-right">
-                                    <li class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
-                                                class="icon-cogs"></i>&nbsp; <h:outputText value="#{loginController.willFindTeacher.teacherName} #{loginController.willFindTeacher.teacherSurname}"/> <b class="caret"></b>
-                                        </a>
-                                        <ul class="dropdown-menu">
-                                            <li>
-                                                <h:outputLink value="#">
-                                                    <i class="icon-user"></i>
-                                                    Profile 
-                                                </h:outputLink>
-                                            </li>
-                                            <li>
-                                                <h:outputLink value="#{request.contextPath}/j_spring_security_logout">
-                                                    <i class="icon-signout"></i>
-                                                    Log out</h:outputLink>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </div>
-                            <!--/.nav-collapse --> 
-                        </div>
-                        <!-- /container --> 
-                    </div>
-                    <!-- /navbar-inner --> 
-                </div>
-                <!-- /navbar -->
-                <div class="subnavbar">
-                    <div class="subnavbar-inner">
-                        <div class="container">
-                            <ul class="mainnav">
-                                <li class="dropdown subnavbar-open-right">
-                                    <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> 
-                                        <i class="icon-building"></i><span>School Works</span> 
-                                        <b class="caret"></b>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li>  <h:link outcome="/schoolWorks/schoolInsert.xhtml">
-                                                <i class="icon-plus"></i><span>&nbsp;School Insert</span> 
-                                            </h:link> </li>
-                                        <li>  <h:link outcome="/schoolWorks/schoolList.xhtml">
-                                                <i class="icon-table"></i><span>&nbsp;School List</span> 
-                                            </h:link> </li>
-                                    </ul>
-
-
-                                </li>
-                            </ul>
-                            <ul class="mainnav">
-                                <li class="dropdown subnavbar-open-right">
-                                    <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> 
-                                        <i class="icon-male"></i><i class="icon-female"></i><span>Teacher Works</span> 
-                                        <b class="caret"></b>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li>  <h:link outcome="/teacherWorks/insertTeacher.xhtml">
-                                                <i class="icon-plus"></i><span>&nbsp;Teacher Insert</span> 
-                                            </h:link>
-                                        </li>
-                                        <li>  <h:link outcome="/teacherWorks/insertTeacherRoleDefinition.xhtml">
-                                                <i class="icon-plus"></i><span>&nbsp;Teacher Role Definition</span> 
-                                            </h:link>
-                                        </li>
-                                        <li>  <h:link outcome="/teacherWorks/teacherList.xhtml">
-                                                <i class="icon-table"></i><span>&nbsp;Teacher List</span> 
-                                            </h:link> 
-                                        </li>
-                                        <li>  <h:link outcome="/teacherWorks/teacherRoleList.xhtml">
-                                                <i class="icon-table"></i><span>&nbsp;Teacher Role List</span> 
-                                            </h:link> 
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-
-                        <!-- /container --> 
-
-
-
-
-
-
-
-
-                    </div>
-                    <!-- /subnavbar-inner --> 
-                </div>
+                <ui:include src="adminMenu.xhtml"/>
             </ui:insert>
             <!-- /subnavbar -->
 
@@ -191,66 +95,8 @@
                 <!-- /main-inner --> 
             </div>
             <!-- /main -->
-            <ui:insert name="bottom">
-                <div class="extra">
-                    <div class="extra-inner">
-                        <div class="container">
-                            <div class="row">
-                                <div class="span3">
-                                    <h4>
-                                        About Free Admin Template</h4>
-                                    <ul>
-                                        <li><a href="javascript:;">EGrappler.com</a></li>
-                                        <li><a href="javascript:;">Web Development Resources</a></li>
-                                        <li><a href="javascript:;">Responsive HTML5 Portfolio Templates</a></li>
-                                        <li><a href="javascript:;">Free Resources and Scripts</a></li>
-                                    </ul>
-                                </div>
-                                <!-- /span3 -->
-                                <div class="span3">
-                                    <h4>
-                                        Support</h4>
-                                    <ul>
-                                        <li><a href="javascript:;">Frequently Asked Questions</a></li>
-                                        <li><a href="javascript:;">Ask a Question</a></li>
-                                        <li><a href="javascript:;">Video Tutorial</a></li>
-                                        <li><a href="javascript:;">Feedback</a></li>
-                                    </ul>
-                                </div>
-                                <!-- /span3 -->
-                                <div class="span3">
-                                    <h4>
-                                        Something Legal</h4>
-                                    <ul>
-                                        <li><a href="javascript:;">Read License</a></li>
-                                        <li><a href="javascript:;">Terms of Use</a></li>
-                                        <li><a href="javascript:;">Privacy Policy</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <!-- /row --> 
-                        </div>
-                        <!-- /container --> 
-                    </div>
-                    <!-- /extra-inner --> 
-                </div>
-                <!-- /extra -->
-                <div class="footer">
-                    <div class="footer-inner">
-                        <div class="container">
-                            <div class="row">
-                                <div class="span12"> &copy; 2013 
-                                    <a href="http://www.egrappler.com/">
-                                        Bootstrap Responsive Admin Template</a>. 
-                                </div>
-                                <!-- /span12 --> 
-                            </div>
-                            <!-- /row --> 
-                        </div>
-                        <!-- /container --> 
-                    </div>
-                    <!-- /footer-inner --> 
-                </div>
+            <ui:insert name="footer">
+                <ui:include src="footer.xhtml"/>
             </ui:insert>
         </h:form>
     </h:body>
