--- a/src/main/webapp/template/main_template.xhtml
+++ b/src/main/webapp/template/main_template.xhtml
@@ -6,13 +6,12 @@
 
     <h:head>
         <meta charset="utf-8"/>
-        <title>Dashboard - Teacher Main Template</title>
         <link href="../resources/css/bootstrap.min.css" rel="stylesheet"/>
         <link href="../resources/css/bootstrap-responsive.min.css" rel="stylesheet"/>
         <link href="../resources/css/font-awesome.css" rel="stylesheet"/>
         <link href="../resources/css/style.css" rel="stylesheet"/>
         <link href="../resources/css/pages/dashboard.css" rel="stylesheet"/>
-
+        <title><ui:insert name="title"></ui:insert></title>
         <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
               <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -72,106 +71,15 @@
                 margin-left: 6px!important;
             }
         </style>
+        
+        <ui:insert name="style">
+            
+        </ui:insert>
     </h:head>
     <h:body>
         <h:form enctype="multipart/form-data">
-            <ui:insert name="top">
-                <div class="navbar navbar-fixed-top">
-
-                    <div class="navbar-inner">
-                        <div class="container">
-                            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span
-                                    class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-                            </a><h:outputLink class="brand" value="/template/dashboard.xhtml">Teacher Main Template </h:outputLink>
-                            <div class="nav-collapse">  
-                                <ul class="nav pull-right">
-                                    <li class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
-                                                class="icon-cogs"></i>&nbsp; <h:outputText value="#{loginController.willFindTeacher.teacherName} #{loginController.willFindTeacher.teacherSurname}"/> <b class="caret"></b>
-                                        </a>
-                                        <ul class="dropdown-menu">
-                                            <li>
-                                                <h:outputLink value="#">
-                                                    <i class="icon-user"></i>
-                                                    Profile 
-                                                </h:outputLink>
-                                            </li>
-                                            <li>
-                                                <h:outputLink value="#{request.contextPath}/j_spring_security_logout">
-                                                    <i class="icon-signout"></i>
-                                                    Log out</h:outputLink>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </div>
-                            <!--/.nav-collapse --> 
-                        </div>
-                        <!-- /container --> 
-                    </div>
-                    <!-- /navbar-inner --> 
-                </div>
-                <!-- /navbar -->
-                <div class="subnavbar">
-                    <div class="subnavbar-inner">
-                        <div class="container">
-                            <ul class="mainnav">
-                                <li class="dropdown subnavbar-open-right">
-                                    <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> 
-                                        <i class="icon-male"></i><i class="icon-female"></i><span>Student Works</span> 
-                                        <b class="caret"></b>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li>  <h:link outcome="/studentWorks/insertStudent.xhtml">
-                                                <i class="icon-plus"></i><span>&nbsp;Student Insert</span> 
-                                            </h:link> </li>
-                                        <li>  <h:link outcome="/studentWorks/studentList.xhtml">
-                                                <i class="icon-table"></i><span>&nbsp;Student List</span> 
-                                            </h:link> </li>
-                                    </ul>
-                                </li>
-                                <li  class="dropdown subnavbar-open-right">
-                                    <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> 
-                                        <i class="icon-certificate"></i><span>Assignment Works</span> 
-                                        <b class="caret"></b>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li> 
-                                            <h:link outcome="/assignmentWorks/insertAssignment.xhtml">
-                                                <i class="icon-plus"></i><span>&nbsp;Assignment Insert</span>
-                                            </h:link> 
-                                        </li>
-                                        <li> 
-                                            <h:link outcome="/assignmentWorks/assignmentList.xhtml">
-                                                <i class="icon-table"></i><span>&nbsp;Assignment List</span>
-                                            </h:link> 
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li  class="dropdown subnavbar-open-right">
-                                    <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> 
-                                        <i class="icon-list-alt"></i><span>Test Works</span> 
-                                        <b class="caret"></b>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li> 
-                                            <h:link outcome="/testWorks/insertTest.xhtml">
-                                                <i class="icon-plus"></i><span>&nbsp;Test Insert</span>
-                                            </h:link> 
-                                        </li>
-                                        <li> 
-                                            <h:link outcome="/testWorks/testList.xhtml">
-                                                <i class="icon-table"></i><span>&nbsp;Test List</span>
-                                            </h:link> 
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                        <!-- /container --> 
-                    </div>
-                    <!-- /subnavbar-inner --> 
-                </div>
+            <ui:insert name="menu">
+                <ui:include src="/template/mainMenu.xhtml"/>
             </ui:insert>
             <!-- /subnavbar -->
 
@@ -190,66 +98,8 @@
                 <!-- /main-inner --> 
             </div>
             <!-- /main -->
-            <ui:insert name="bottom">
-                <div class="extra">
-                    <div class="extra-inner">
-                        <div class="container">
-                            <div class="row">
-                                <div class="span3">
-                                    <h4>
-                                        About Free Admin Template</h4>
-                                    <ul>
-                                        <li><a href="javascript:;">EGrappler.com</a></li>
-                                        <li><a href="javascript:;">Web Development Resources</a></li>
-                                        <li><a href="javascript:;">Responsive HTML5 Portfolio Templates</a></li>
-                                        <li><a href="javascript:;">Free Resources and Scripts</a></li>
-                                    </ul>
-                                </div>
-                                <!-- /span3 -->
-                                <div class="span3">
-                                    <h4>
-                                        Support</h4>
-                                    <ul>
-                                        <li><a href="javascript:;">Frequently Asked Questions</a></li>
-                                        <li><a href="javascript:;">Ask a Question</a></li>
-                                        <li><a href="javascript:;">Video Tutorial</a></li>
-                                        <li><a href="javascript:;">Feedback</a></li>
-                                    </ul>
-                                </div>
-                                <!-- /span3 -->
-                                <div class="span3">
-                                    <h4>
-                                        Something Legal</h4>
-                                    <ul>
-                                        <li><a href="javascript:;">Read License</a></li>
-                                        <li><a href="javascript:;">Terms of Use</a></li>
-                                        <li><a href="javascript:;">Privacy Policy</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <!-- /row --> 
-                        </div>
-                        <!-- /container --> 
-                    </div>
-                    <!-- /extra-inner --> 
-                </div>
-                <!-- /extra -->
-                <div class="footer">
-                    <div class="footer-inner">
-                        <div class="container">
-                            <div class="row">
-                                <div class="span12"> &copy; 2013 
-                                    <a href="http://www.egrappler.com/">
-                                        Bootstrap Responsive Admin Template</a>. 
-                                </div>
-                                <!-- /span12 --> 
-                            </div>
-                            <!-- /row --> 
-                        </div>
-                        <!-- /container --> 
-                    </div>
-                    <!-- /footer-inner --> 
-                </div>
+            <ui:insert name="footer">
+                <ui:include src="/template/footer.xhtml"/> 
             </ui:insert>
         </h:form>
     </h:body>
